<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="custom_percent">Custom %</string>
    <string name="ten_percents">10%</string>
    <string name="amount">Amount</string>
    <string name="fifteen_percent">15 %</string>
    <string name="tip">Tip</string>
    <string name="Total">Total</string>
</resources>
