<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".TipActivityFragment" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/custom_percent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/sb_customTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="10" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent10TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ten_percents"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_custom_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tv_tip_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_tip_amount_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_total_amount_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Space />

</GridLayout>